--- a/css/style.css
+++ b/css/style.css
@@ -7,4 +7,34 @@ html {
 * {
     box-sizing: inherit;
 }
+
+body {
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+}
 /* !global styles */
+
+/* header */
+.headerWrap {
+    width: 100%;
+    height: 225px;
+    border-bottom: 2px solid black;
+    background-color: #555;
+    display: flex;
+    justify-content: space-between;
+}
+
+.headerWrap img {
+    height: 225px;
+    object-fit: contain;
+}
+
+.headFlag {
+    width: 80%;
+    height: 150px;
+    border-bottom-left-radius: 35px;
+    background-color: blueviolet;
+    box-shadow: -8px 8px 16px;
+}
+/* !header */
