--- a/css/style.css
+++ b/css/style.css
@@ -36,5 +36,52 @@ body {
     border-bottom-left-radius: 35px;
     background-color: blueviolet;
     box-shadow: -8px 8px 16px;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+}
+
+.wipeText {
+    text-align: center;
+    animation: textgrow 6s forwards;
+    overflow: hidden;
+}
+
+.wipeText h1 {
+    color: white;
+    font-size: 4.5rem;
+    line-height: 25px;
+}
+
+.wipeText h3 {
+    color: white;
+    font-size: 2.5rem;
+}
+
+@keyframes textgrow {
+    0%{
+        border-top: 1px solid white;
+        border-bottom: 1px solid white;
+        width: 1px;
+        height: 1px;
+    }
+    50% {
+        width: 100%;
+        height: 1px;
+        border-top: 1px solid white;
+        border-bottom: 1px solid white;
+    }
+    99% {
+        height: 150px;
+        width: 100%;
+        border-top: 1px solid white;
+        border-bottom: 1px solid white;
+    }
+    100% {
+        height: 150px;
+        width: 100%;
+        border-top: none;
+        border-bottom: none;
+    }
 }
 /* !header */
