--- a/css/style.css
+++ b/css/style.css
@@ -130,10 +130,19 @@ body {
         font-size: 2.4rem;
         padding: 15px 0;
     }
+
+    .newsWrap {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 /* !home */
 
 /* home news blocks */
-
+    .newsCard {
+        width: 65%;
+    }
 /* !home news blocks */
 
 /* event bar */
