--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body {
 }
 
 .headFlag {
-    width: 80%;
+    width: 100%;
     height: 150px;
     border-bottom-left-radius: 35px;
     background-color: blueviolet;
@@ -90,8 +90,35 @@ body {
         border-bottom: none;
     }
 }
-/* !header */
 
+.flagAreaWrap {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+}
+/* !header */
+.menuWrap {
+    width: 100%;
+    height: 75px;
+    display: flex;
+    align-items: center;
+}
+
+.menuWrap ul {
+    display: flex;
+    list-style-type: none;
+}
+
+.menuWrap ul li {
+    margin-right: 20px;
+    font-size: 3rem;
+    color: white;
+}
+
+.menuWrap ul li a {
+    text-decoration: none;
+    color: white;
+}
 /* nav */
 
 /* !nav */
