--- a/css/style.css
+++ b/css/style.css
@@ -220,6 +220,99 @@ body {
 
 /* !article menu */
 
+/* tasks page */
+.taskCardArea {
+    width: 95%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.taskCard{
+    width: 360px;
+    margin: 15px;
+}
+
+.taskTop{
+    width: 100%;
+    text-align: center;
+    border: 1px solid black;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.taskTop h2{
+    font-size: 2.2rem;
+    padding: 10px 0;
+    text-transform: uppercase;
+}
+
+.taskBody {
+    width: 100%;
+    padding: 15px;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+}
+
+.taskBody p{
+    font-size: 1.4rem;
+}
+
+.taskPname {
+    width: 100%;
+    text-align: center;
+    border: 1px solid black;
+    padding: 15px;
+}
+
+.taskPname p{
+    font-size: 1.6rem;
+}
+
+.taskPointBlock{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    border-bottom: 1px solid black;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.pb1{
+    width: 33.3%;
+    text-align: center;
+    padding: 10px;
+}
+
+.pb1 p{
+    font-size: 1.3rem;
+}
+
+.pb2{
+    width: 33.3%;
+    text-align: center;
+    padding: 10px;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+}
+
+.pb2 p{
+    font-size: 1.3rem;
+}
+
+.pb3{
+    width: 33.3%;
+    text-align: center;
+    padding: 10px;
+}
+
+.pb3 p{
+    font-size: 1.3rem;
+}
+/* !tasks page */
+
 /* footer */
 .footerWrap {
     width: 100%;
