--- a/css/style.css
+++ b/css/style.css
@@ -313,6 +313,120 @@ body {
 }
 /* !tasks page */
 
+/* zones */
+
+.zone {
+    border-radius: 90%;
+    border: 2px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.zone p {
+    font-size: 1.6rem;
+}
+
+.board {
+    width: 100px;
+    height: 100px;
+    background-color: black;
+    color: white;
+}
+
+.t1 {
+    width: 200px;
+    height: 200px;
+    background-color: rgb(243, 114, 234);
+}
+
+.t2 {
+    width: 300px;
+    height: 300px;
+    background-color: rgb(243, 114, 234);
+}
+
+.t3 {
+    width: 400px;
+    height: 400px;
+    background-color: rgb(243, 114, 234);
+    overflow: hidden;
+}
+
+.t4 {
+    width: 500px;
+    height: 500px;
+    background-color: rgb(243, 114, 234);
+    overflow: hidden;
+}
+
+.t5 {
+    width: 600px;
+    height: 600px;
+    background-color: rgb(243, 114, 234);
+    overflow: hidden;
+}
+
+.t6 {
+    width: 700px;
+    height: 700px;
+    background-color: lightblue;
+    overflow: hidden;
+}
+
+.t7 {
+    width: 800px;
+    height: 800px;
+    background-color: lightblue;
+    overflow: hidden;
+}
+
+.t8 {
+    width: 900px;
+    height: 900px;
+    background-color: lightblue;
+    overflow: hidden;
+}
+
+.t9 {
+    width: 1000px;
+    height: 1000px;
+    background-color: lightblue;
+    overflow: hidden;
+}
+
+.t10 {
+    width: 1100px;
+    height: 1100px;
+    background-color: lightblue;
+    overflow: hidden;
+}
+
+.t11 {
+    width: 1200px;
+    height: 1200px;
+    background-color: yellowgreen;
+    overflow: hidden;
+}
+
+.t12 {
+    width: 1300px;
+    height: 1300px;
+    background-color: yellowgreen;
+    overflow: hidden;
+}
+
+.t13 {
+    width: 1400px;
+    height: 1400px;
+    margin-top: 35px;
+    background-color: yellowgreen;
+    overflow: hidden;
+}
+
+/* !zones */
+
 /* footer */
 .footerWrap {
     width: 100%;
